# dmi-mdharura-etl

./: .env.example  .gitignore  Dockerfile.dagster  Dockerfile.etl  README.md  docker-compose.yml
etl/: .env.dev  Dockerfile  README.md  __init__.py  assets.py  dagster.yaml  definitions.py  project.py  pyproject.toml  setup.cfg  setup.py  workspace.yaml
etl/.dlt/: .sources  config.toml  secrets.toml
etl/mdharura_dbt/: .gitignore  .user.yml  dbt_project.yml  packages.yml  profiles.yml
etl/mdharura_dbt/macros/: cast_column.sql  column_exists.sql  table_exists.sql
etl/mdharura_dbt/models/: sources.yml
etl/mdharura_dbt/models/data_mart/: dim_community_units.sql  dim_county.sql  dim_date.sql  dim_epi_week.sql  dim_health_facilities.sql  dim_sub_county.sql  fct_community_units.sql  fct_country_unit.sql  fct_county_units.sql  fct_health_facilities.sql  fct_learning_institutions.sql  fct_roles.sql  fct_sub_county_units.sql  fct_tasks.sql  fct_veterinary_facilities.sql
etl/mdharura_dbt/models/reporting/: aggregate_ebs_all_indicators_report.sql  aggregate_ebs_indicators_report.sql  aggregate_ebs_roles_indicators_report.sql  aggregate_ebs_tasks_indicators_report.sql  aggregate_users_indicators_report.sql  tasks_linelist.sql
etl/mdharura_dbt/models/staging/: stg_roles.sql  (+2 more)
etl/mdharura_dbt/seeds/: kenya_community_units.csv  kenya_health_facilities.csv  kenya_sub_counties.csv
etl/mdharura_dlt/: __init__.py  assets.py  helpers.py  mongodb_pipeline.py  resources.py
etl/mongo_postgres/: assets.py  helpers.py  mongodb_pipeline.py
etl/schema/: mongodb.schema.yaml
(+5 files in other folders)
