[project]
name = "mdharura_etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "setuptools",
    "dagster",
    "dlt",
    "dagster-webserver",
    "pymongo",
    "pymongoarrow",
    "dagster-dbt",
    "dbt-core",
    "dbt-postgres",
    "dlt[postgres]"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "definitions"
